@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [googledrive] Fix extraction on Python 3.6
+
+
 version 2017.02.04.1
 
 Extractors
